--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "moment": "^2.30.1",
     "mysql2": "^3.7.0",
+    "nodemailer": "^6.9.13",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
