--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,11 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_PORT=
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+
+APP_NAME=
+DEFAULT_FROM_EMAIL=
