--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.17",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^10.4.17",
     "@pusher/push-notifications-server": "^1.2.6",
     "@sendgrid/mail": "^8.1.0",
     "axios": "^1.6.5",
@@ -42,7 +44,9 @@
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "csurf": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
+    "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "moment": "^2.30.1",
@@ -55,6 +59,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "slug": "^8.2.3",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.0",
     "twilio": "^5.0.0-rc.1",
     "typeorm": "^0.3.19"
