--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "seed": "ts-node --project tsconfig.json src/database/seed.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -40,6 +41,7 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chance": "^1.1.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
