--- a/package.json
+++ b/package.json
@@ -38,16 +38,19 @@
     "@nestjs/websockets": "^10.4.17",
     "@pusher/push-notifications-server": "^1.2.6",
     "@sendgrid/mail": "^8.1.0",
-    "axios": "^1.6.5",
+    "@supabase/supabase-js": "^2.75.0",
+    "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chance": "^1.1.12",
+    "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
+    "firebase": "^12.4.0",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
@@ -70,6 +73,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cheerio": "^1.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
