--- a/package.json
+++ b/package.json
@@ -76,8 +76,9 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/cheerio": "^1.0.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.25",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
