--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migrate": "npm run typeorm migration:run",
     "typeorm:revert": "npm run typeorm migration:revert",
-    "seed": "ts-node --project tsconfig.json src/database/seed.ts"
+    "seed": "ts-node --project tsconfig.json src/database/seed.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate -d src/data-source.ts",
+    "migration:create": "npm run typeorm -- migration:create"
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
@@ -92,7 +95,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
