--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "seed": "ts-node --project tsconfig.json src/database/seed.ts",
     "migration:run": "npm run typeorm -- migration:run -d src/data-source.ts",
     "migration:generate": "npm run typeorm -- migration:generate -d src/data-source.ts",
-    "migration:create": "npm run typeorm -- migration:create"
+    "migration:create": "npm run typeorm -- migration:create",
+    "migration:run:prod": "node -e \"require('./dist/data-source').AppDataSource.initialize().then(ds => ds.runMigrations()).then(() => process.exit(0)).catch(e => { console.error(e); process.exit(1); })\""
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
