--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.17",
+    "@nestjs/schedule": "^6.1.1",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.4.17",
